src/components/tags/tooltip/tooltip.scss
@import 'styles/penpot';
@import 'styles/sketch';
@import 'styles/figma';
@import 'styles/framer';

.tooltip {
  position: absolute;
  left: 50%;
  transform: translateX(-50%) translateY(0);
  z-index: 3;
  width: auto;
  min-width: var(--tooltip-min-width);
  max-width: var(--tooltip-max-width);
  pointer-events: none;
  user-select: none;

  &::after {
    position: absolute;
    left: 50%;
    content: '';
  }

  &.tooltip--top {
    bottom: calc(100% + var(--tooltip-arrow-size));

    &::after {
      bottom: 0;
      transform: translateX(-50%) translateY(50%) rotate(45deg);
      transform-origin: 50% 50%;
      border-top: transparent;
      border-right: var(--tooltip-arrow-border-width) solid
        var(--tooltip-arrow-border-color);
      border-bottom: var(--tooltip-arrow-border-width) solid
        var(--tooltip-arrow-border-color);
      border-left: transparent;
      border-radius: var(--tooltip-arrow-radius);
      background-color: var(--tooltip-arrow-background-color);
      width: var(--tooltip-arrow-size);
      height: var(--tooltip-arrow-size);
    }
  }

  &.tooltip--bottom {
    top: calc(100% + var(--tooltip-arrow-size));

    &::after {
      top: 0;
      transform: translateX(-50%) translateY(-50%) rotate(45deg);
      transform-origin: 50% 50%;
      border-top: var(--tooltip-arrow-border-width) solid
        var(--tooltip-arrow-border-color);
      border-right: transparent;
      border-bottom: transparent;
      border-left: var(--tooltip-arrow-border-width) solid
        var(--tooltip-arrow-border-color);
      border-radius: var(--tooltip-arrow-radius);
      background-color: var(--tooltip-arrow-background-color);
      width: var(--tooltip-arrow-size);
      height: var(--tooltip-arrow-size);
    }
  }

  &__block {
    display: flex;
    justify-content: center;
    gap: var(--tooltip-gap);
    outline: var(--tooltip-border-width) solid var(--tooltip-border-color);
    outline-offset: var(--tooltip-border-offset);
    box-shadow: var(--tooltip-shadow);
    border-radius: var(--tooltip-radius);
    background-color: var(--tooltip-background-color);
    padding: var(--tooltip-padding-top) var(--tooltip-padding-right)
      var(--tooltip-padding-bottom) var(--tooltip-padding-left);
  }

  &__snack {
    display: flex;
    flex: 1;
    align-items: center;
    gap: var(--tooltip-gap);
  }

  &__text {
    --text-color-primary: var(--tooltip-text-color);

    text-align: left;
  }

  &__image {
    border-radius: var(--tooltip-image-radius);
    width: var(--tooltip-image-width);
    height: var(--tooltip-image-height);
  }

  &--singleline {
    min-width: unset;
    max-width: unset;

    .tooltip__text {
      text-align: center;
      text-transform: var(--tooltip-text-transform);
      white-space: nowrap;
    }
  }

  &.tooltip--portal {
    position: fixed;
    top: unset;
    bottom: unset;
    left: 0;
    transform: none;
    z-index: 9999;
  }

  &--withimage {
    --tooltip-min-width: var(--tooltip-with-image-min-width);

    .tooltip__block {
      padding: var(--tooltip-with-image-padding-top)
        var(--tooltip-with-image-padding-right)
        var(--tooltip-with-image-padding-bottom)
        var(--tooltip-with-image-padding-left);
    }

    .tooltip__text {
      text-align: left;
      text-transform: var(--tooltip-text-transform);
    }
  }
}

